refactor(bootstrap): fix runtime dependency bootstrap warnings